widget: Preserve the selection on reset

https://bugzilla.gnome.org/show_bug.cgi?id=789954